<resources>
    <string name="app_name">CRUD_Penjualan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="next">Next</string>
    <string name="step_1_of_3">Step 1 of 3</string>
    <string name="step_2_of_3">step 2 of 3</string>
    <string name="finish">FINISH</string>
    <string name="step_3_of_3">Step 3 of 3</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="transaction">Transaction</string>
    <string name="add">Add</string>
    <string name="selamatdatang">Welcome</string>
    <string name="transaksi">Transaksi</string>
    <string name="total_transaksi_adalah">Total Transaksi Adalah</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="insert">Insert</string>
    <string name="silahkan_mengisi_password_untuk_menjaga_keamanan_akun_anda">Silahkan mengisi Password untuk menjaga Keamanan akun anda</string>
    <string name="edit">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>