<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundSecondColor"
    tools:context=".ui.main.register.RegisterFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="14dp">

        <ImageView

            android:id="@+id/back"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/sign_up"
            android:textColor="@color/textColorSecond"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/step_1_of_3"
            android:textColor="@color/textColorSecond"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingHorizontal="14dp"
        tools:context=".MainFragment">

        <!--        <com.airbnb.lottie.LottieAnimationView-->
        <!--            android:id="@+id/animationView"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="100dp"-->
        <!--            app:lottie_rawRes="@raw/user"-->
        <!--            app:lottie_autoPlay="true"-->
        <!--            app:lottie_loop="true"/>-->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_undraw_user_profile" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:paddingVertical="4dp"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="14dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/next"
        android:textColor="@color/colorPrimary"
        app:icon="@drawable/ic_next_arrow"
        app:iconTint="@color/colorPrimary" />
</RelativeLayout>