<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.home.transactionInput.TransactionInputActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name"
            app:startIconDrawable="@drawable/ic_item_name"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total"
            app:startIconDrawable="@drawable/ic_amount"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white"
                android:inputType="numberDecimal"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            app:startIconDrawable="@drawable/ic_price"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white"
                android:inputType="numberDecimal"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnInsert"
            android:layout_gravity="right"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/insert"
            android:textColor="@android:color/white"
            app:icon="@drawable/ic_add"
            app:iconTint="@android:color/white" />


    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spinKitLoading"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:layout_gravity="center"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorPrimaryDark" />
</RelativeLayout>