<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundSecondColor"
    tools:context=".ui.main.registerCompleted.RegisterCompletedFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="14dp">

        <ImageView

            android:id="@+id/back"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/sign_up"
            android:textColor="@color/textColorSecond"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/step_3_of_3"
            android:textColor="@color/textColorSecond"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingHorizontal="14dp"
        tools:context=".MainFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/name"
            android:paddingVertical="4dp"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--        <TextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:layout_marginStart="30dp"-->
        <!--            android:layout_marginEnd="30dp"-->
        <!--            android:height="50dp"-->
        <!--            android:gravity="center_horizontal"-->
        <!--            android:padding="10dp"-->
        <!--            android:text="Congratulation"-->
        <!--            android:textSize="20sp"-->
        <!--            android:textStyle="bold" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/tvName"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:layout_marginStart="30dp"-->
        <!--            android:layout_marginEnd="30dp"-->
        <!--            android:height="50dp"-->
        <!--            android:background="@drawable/border_grey"-->
        <!--            android:hint="Name"-->
        <!--            android:padding="10dp"-->
        <!--            android:textSize="14sp" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/tvEmail"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:layout_marginStart="30dp"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:layout_marginEnd="30dp"-->
        <!--            android:height="50dp"-->
        <!--            android:background="@drawable/border_grey"-->
        <!--            android:padding="10dp"-->
        <!--            android:text="itborneoid@gmail.com"-->
        <!--            android:textSize="14sp" />-->


        <!--        <Button-->
        <!--            android:id="@+id/btnHome"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginHorizontal="30dp"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:background="@drawable/background_white"-->
        <!--            android:text="KONFIRMASI"-->
        <!--            android:textColor="@android:color/white" />-->

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="14dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/finish"
        android:textColor="@color/colorPrimary"
        app:icon="@drawable/ic_done"
        app:iconTint="@color/colorPrimary" />
</RelativeLayout>