<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundSecondColor"
    tools:context=".ui.main.registerNext.RegisterNextFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="14dp">

        <ImageView
            android:id="@id/back"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/sign_up"
            android:textColor="@color/textColorSecond"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/step_2_of_3"
            android:textColor="@color/textColorSecond"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="14dp"
        android:orientation="vertical"
        tools:context=".MainFragment">

        <TextView
            android:id="@+id/tvHello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/silahkan_mengisi_password_untuk_menjaga_keamanan_akun_anda"
            android:textColor="@android:color/white"
            android:textSize="14sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingVertical="4dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white"
                android:inputType="textPassword"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        <EditText-->
        <!--            android:id="@+id/etPassword"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:layout_marginStart="30dp"-->
        <!--            android:layout_marginEnd="30dp"-->
        <!--            android:height="50dp"-->
        <!--            android:background="@drawable/border_grey"-->
        <!--            android:hint="Password"-->
        <!--            android:inputType="textPassword"-->
        <!--            android:padding="10dp"-->
        <!--            android:textSize="14sp" />-->

        <!--        <EditText-->
        <!--            android:id="@+id/etConfirmPassword"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:layout_marginStart="30dp"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:layout_marginEnd="30dp"-->
        <!--            android:height="50dp"-->
        <!--            android:background="@drawable/border_grey"-->
        <!--            android:hint="Confirm Password"-->
        <!--            android:inputType="textPassword"-->
        <!--            android:padding="10dp"-->
        <!--            android:textSize="14sp" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingVertical="4dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white"
                android:inputType="textPassword"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--        <Button-->
        <!--            android:id="@+id/btnFinish"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginHorizontal="30dp"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:background="@drawable/background_white"-->
        <!--            android:text="Finish"-->
        <!--            android:textColor="@android:color/white" />-->


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="14dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/next"
        android:textColor="@color/colorPrimary"
        app:icon="@drawable/ic_next_arrow"
        app:iconTint="@color/colorPrimary" />
</RelativeLayout>